--- a/frontend/src/app/components/admin/admin.component.html
+++ b/frontend/src/app/components/admin/admin.component.html
@@ -1,1 +1,17 @@
-<p>admin works!</p>
+<div class="entirePage">
+    <app-top-bar></app-top-bar>
+   <div class="bottom">
+       <app-side-bar></app-side-bar>
+       <div class="container">
+           <div class="topContainer">
+                <input type="text" placeholder="Search...">
+                <!-- <button class="search-icon">
+                    🔍
+                </button> -->
+           </div>
+           <div class="contents"><router-outlet></router-outlet></div>
+       </div>
+   </div>
+</div>
+
+
