--- a/frontend/src/app/components/manager/manager.component.html
+++ b/frontend/src/app/components/manager/manager.component.html
@@ -1,1 +1,18 @@
-<p>manager works!</p>
+<div class="entirePage">
+     <app-top-bar></app-top-bar>
+    <div class="bottom">
+        <app-side-bar></app-side-bar>
+        <div class="container">
+            <div class="topContainer">
+                <div class="search-bar">
+                    <input type="text" placeholder="Search...">
+                    <button class="search-icon">
+                        🔍
+                    </button>
+                </div>
+                <button class="plus-icon">+</button>
+            </div>
+            <div class="contents"><router-outlet></router-outlet></div>
+        </div>
+    </div>
+</div>
